# Thinkspire

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  pytest.ini  tsconfig.json
app/: ThemeToggle.tsx  globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/chat/: page.tsx
app/login/: page.tsx
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agent/: agent.py
backend/api/v1/routers/: auth.py  chat.py
backend/database/: mongodb.py  users.py
backend/services/: ai_service.py  auth_service.py  dummy_ai.py  error_handling.py  logging_config.py  rate_limiter.py
backend/sessions/: redis_session.py
backend/tests/: conftest.py  test_agent.py  test_api.py
think-inspire/: .gitignore
think-inspire/app/: package.json
think-inspire/app/chat/: page.tsx
think-inspire/backend/: .env.example  main.py  requirements.txt
think-inspire/backend/agent/: agent.py
think-inspire/backend/api/v1/routers/: chat.py
think-inspire/backend/database/: mongodb.py
think-inspire/backend/sessions/: redis_session.py
think-inspire/backend/tests/: test_agent.py
