[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkspire-backend"
version = "1.0.0"
description = "Thinkspire - AI-Powered Adaptive Learning Assistant Backend"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.3",
    "uvicorn[standard]==0.23.0",
    "motor>=3.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "groq>=0.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "agent*", "database*", "services*", "sessions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
